# subvox

./: .gitignore  Cargo.toml  README.md  justfile
subvox-backend/: Cargo.toml
subvox-backend/benches/: stft_bench.rs
subvox-backend/src/: audio.rs  cepstrum.rs  fft.rs  lib.rs  lpc.rs  main.rs  notes.rs  shr.rs  stats.rs  tilt.rs  windowing.rs
subvox-backend/src/pitch/: cpp.rs  hps.rs  mod.rs  yin.rs
subvox-common/: Cargo.toml
subvox-frontend/: Cargo.toml
subvox-frontend/src/: lib.rs  main.rs
