[package]
name = "subvox-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
bytemuck = { version = "1.25.1", features = ["derive", "track_caller"] }
memmap2 = "0.9.11"
mimalloc = "0.1.52"
rayon = "1.12.0"
realfft = { version = "3.5.0", features = ["avx", "neon", "sse"] }

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "stft_bench"
harness = false
